Final logic implemented

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <div class="ope" id="-">-</div>
             <div class="number" id=".">.</div>
             <div class="number" id="0">0</div>
-            <div class="ope" id="=">=</div>
+            <div class="equal" id="=">=</div>
             <div class="ope" id="+">+</div>
         </div>
     </div>
