--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <body>
     <div class="calculator">
         <div class="screen">
-            <div class="operation">Yolo</div>
+            <div class="operation"></div>
             <div class="input">0</div>
         </div>
         <div class="vanish">
